k8s/apps/logging-operator/overlays/prod/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logs
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/target: "traefik.k8s.235.tdude.co"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - logs.monitoring.235.tdude.co
    secretName: logs-monitoring-tdude-co-tls
  rules:
  - host: logs.monitoring.235.tdude.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana-kb-http
            port:
              name: https
